# boost-statechart-basics

./: BoostSimpleExample.hpp  CMakeLists.txt  Deferral.hpp  Discard.hpp  Hierarchy.hpp  PersonWithMoney.hpp  README.md  conanfile.txt  main.cpp  smcommon.h
.cache/clangd/index/: BoostSimpleExample.hpp.41E32D4AB7F95EBD.idx  CommandQueue.hpp.7C9ACCC93F049F63.idx  Deferral.hpp.D0C4B46DD6287D98.idx  Discard.hpp.0E8539A8899041A8.idx  Hierarchy.hpp.0EBA2F2F434ACA7E.idx  PersonWithMoney.hpp.93D0CECA2A914235.idx  main.cpp.14DA8CE7EE9989DE.idx  main.cpp.19AF1B575FA79489.idx  main.cpp.9291A1AC5F654458.idx  main.cpp.929E53BADF42180A.idx  main.cpp.D14E98BBC05C1CDA.idx  main.cpp.E459CE02293B24C8.idx  smcommon.h.20D7F3DE5275B9F2.idx
conan/: conan_paths.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
src/: CMakeLists.txt
src/BoostSimpleExample/: BoostSimpleExample.hpp  CMakeLists.txt  main.cpp
src/CommandQueue/: CMakeLists.txt  CommandQueue.hpp  main.cpp
src/Deferral/: CMakeLists.txt  Deferral.hpp  main.cpp
src/Discard/: CMakeLists.txt  Discard.hpp  main.cpp
src/Hierarchy/: CMakeLists.txt  Hierarchy.hpp  main.cpp
src/PersonWithMoney/: CMakeLists.txt  PersonWithMoney.hpp  main.cpp
src/common/: smcommon.h
